# thats-ruff-buddy

./: .pre-commit-hooks.yaml  README.md  bark.py  pyproject.toml
bark/: __init__.py
